--- a/index.html
+++ b/index.html
@@ -145,12 +145,10 @@
 <p class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Hi,All! I am currently a research fellow with the school of computing, University of Leeds, UK. 
 I am also an adjunct research scientist at the Big Data and Brain Computing Research Center, Beihang University, China.
-I was the research fellow and project leader of several national or international research and engineering projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. we built large-scale resource management infrastructures to support those above.  As for the specific research topics, we have been focusing on the scalable resource scheduling at Internet scale, reliable and dependable service provisioning by leveraging effective system failover, long tail mitigation, or quantitative reliability analytics and modeling etc.  I has since 2013 published more than 25 peer-reviewed articles in the field of distributed systems and cloud computing. &nbsp;</span></p> 
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Before this, I obtained my Ph.D in Jan. 2017 in the&nbsp;<a href="http://scse.buaa.edu.cn" target="_blank">School of Computer Science and Engineering</a>, Beihang University and supervised by Professor &nbsp;<a href="https://engineering.leeds.ac.uk/staff/331/Professor_Jie_Xu" target="_blank">Jie Xu</a>. I received my B.Sc. from School of Computer Science and Engineering,&nbsp;<a href="http://www.buaa.edu.cn" target="_blank">Beihang University</a>&nbsp;,China in June, 2011. &nbsp;</a> The same year I was accepted as a ph.D student and became&nbsp;a member  of the Institute of Advanced Computing Technology led by Professor&nbsp;Jinpeng Huai.  In the past few years, I had been working in the Network Computing Group(NCG) at Beihang  University, China and Distributed Systems and Services Group(DSS) at Univerity of Leeds, UK. 
-I was the founder and team lead of <a href="http://ved.ivic.org.cn/ivic/wiki/SIGRS" target="_blank">SIGRS reseach group</a>. 
-During 2014 to 2016, I also joined Fuxi the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on cloud system issues at Internet scale. 
-I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>, IEEE and&nbsp;<a href="http://www.ccf.org.cn">CCF(China Computer Federation)</a>.
+At present, I am leading several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 1) scalable resource scheduling at Internet scale, 2) dependable service provisioning by leveraging effective system failover, long-tail task mitigation, and quantitative reliability modeling etc. and 3) geo-distributed data processing etc. I has published more than 25 peer-reviewed papers in the field of distributed systems and cloud computing. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Services Computing, IEEE Internet Computing, VLDB, IEEE DSN, ACM SOSP(poster), USENIX LISA, IEEE HASE, IEEE ICPADS etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participating and contributions to the reliable resource management and scheduling at massive scale.  
+</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   I obtained my PhD degree in January 2017 from the School of Computing, Beihang University, China. Before this, I received my B.Sc. from the same school in 2011. In the past few years, I had been working both in the Networked Computing Group (NCG) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds. 
+I was the founder and team lead of SIGRS (Special Interest Group on Resource Scheduling) and MSDS (Massive-Scale Distributed Systems) research group. I had led several UK-China research collaborations including the COLAB project and developed strong links with the UK Computer Science community (such as University of Leeds, University of Edinburgh, Lancaster University etc.). During 2014 to 2016, I also joined Fuxi the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on cloud system issues at Internet scale.  I am a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>, IEEE and&nbsp;<a href="http://www.ccf.org.cn">CCF(China Computer Federation)</a>.
 </span></p>
 
 
@@ -176,7 +174,7 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.11 - Present: &nbsp;&nbsp; Research Fellow, School of Computing, University of Leeds, UK&nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.12 - Present: &nbsp;&nbsp; Academic and Engineering Consultant, <a href="http://www.edgetic.com/">Edgetic Limited.</a>, Leeds, UK &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.12 - Present: &nbsp;&nbsp; Academic Consultant, <a href="http://www.edgetic.com/">Edgetic Limited.</a>, Leeds, UK &nbsp;&nbsp;</span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems for big data, cloud computing and IoT </span></p>
@@ -228,10 +226,10 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD students: Jianyong Zhu(2017.5- ), Xianyong Yi (2018.9 - ) </span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Xiaoyang Sun(2015.9 - ), Yunfei Liu, Zhenping Li, Min Shi, Junqing Xiao, Ximing Qu (2017.9 - ) </span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Lian Du (Master graduated in 2018, first employment at Alibaba Cloud Inc.) </span></p> 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xixu Wang (Master graduated in 2017, first employment at Baidu Inc.) </span></p> 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yuda Wang (Master graduated in 2015, first employment at China Telecom.) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Xiaoyang Sun(2015.9 - ), Yunfei Liu, Zhenping Li, Min Shi, Junqing Xiao, Ximing Qu (2016.9 - ) </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Lian Du (Master, 2015-2018, first employment at Alibaba Cloud Inc.) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xixu Wang (Master, 2014-2017, first employment at Baidu Inc.) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yuda Wang (Master, 2012-2015, first employment at China Telecom.) </span></p> 
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
@@ -287,7 +285,9 @@ I am also a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>,
 </span></p>
 
 
-<p class="info">designed by Renyu Yang and updated by 19th December, 2017 </p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; designed by Renyu Yang and updated by 1st Jan, 2018 </span></p>
 
 </body>
 </html>
