--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </div>
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;  "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Scientist, Big Data and Brain Computing Research Center(BDBC), <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Scientist, <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p>
 
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (LS):&nbsp; Room 8.02, E.C.Stoner Building, Leeds, UK, LS2 9JT &nbsp;</p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (BJ):&nbsp; Room G504, New Main Building, No.37,Xueyuan Rd.,Haidian District,Beijing, China, 100191.&nbsp;</p>
