--- a/index.html
+++ b/index.html
@@ -225,12 +225,14 @@ I was the founder and team lead of SIGRS (Special Interest Group on Resource Sch
 
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD students: Jianyong Zhu(2017.5- ), Xianyong Yi (2018.9 - ) </span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Xiaoyang Sun(2015.9 - ), Yunfei Liu, Zhenping Li, Min Shi, Junqing Xiao, Ximing Qu (2016.9 - ) </span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Lian Du (Master, 2015-2018, first employment at Alibaba Cloud Inc.) </span></p> 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xixu Wang (Master, 2014-2017, first employment at Baidu Inc.) </span></p> 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yuda Wang (Master, 2012-2015, first employment at China Telecom.) </span></p> 
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students within MSDS Research Team </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PostDoc researcher: Dr. Qi Shen (2017.9 - ) </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD students: Jianyong Zhu (2017.5 - ), Xianyong Yi (2018.9 - ) </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Junqing Xiao, Ximing Qu, Zhenping Li (2016.9 - ), Kaiyang Shao, Muqing Xian (2017.9 - )   </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xiaoyang Sun (M.Sc, 2015-2018, now on leave for Ph.D study) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Lian Du (M.Sc, 2015-2018, first employment at Alibaba Cloud Inc.) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xixu Wang (M.Sc, 2014-2017, first employment at Baidu Inc.) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yuda Wang (M.Sc, 2012-2015, first employment at China Telecom.) </span></p> 
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
@@ -288,7 +290,7 @@ I was the founder and team lead of SIGRS (Special Interest Group on Resource Sch
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; designed by Renyu Yang and updated by 1st Jan, 2018 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; designed by Renyu Yang and updated by 5th April, 2018 </span></p>
 
 </body>
 </html>
