--- a/publications.html
+++ b/publications.html
@@ -83,111 +83,111 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  R.Yang, Z.Zhao, J. Ouyang, J.Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms, in press </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Zhao, J. Ouyang, J.Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms, in press </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. Fog Orchestration and Simulation for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, in press </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. Fog Orchestration and Simulation for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, in press </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  P.Garraghan, R.Yang*, Z.Wen, A.Romanovsky, J.Xu, R.Buyya,R. Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale. IEEE Cloud Computing, 2018 (SCI-IF = 2.929, Q1) <a href="paper/ieeecloud2018.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Garraghan, R.Yang*, Z.Wen, A.Romanovsky, J.Xu, R.Buyya,R. Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale. IEEE Cloud Computing, 2018 (SCI-IF = 2.929, Q1) <a href="paper/ieeecloud2018.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li. ROSE: Cluster Resource Scheduling via Speculative Over-subscription. in the 38th IEEE ICDCS 2018 <a href="paper/icdcs2018.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li. ROSE: Cluster Resource Scheduling via Speculative Over-subscription. in the 38th IEEE ICDCS 2018 <a href="paper/icdcs2018.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  R.Yang, X.Ouyang, Y.Chen, P.Townend, J.Xu. Intelligent Resource Scheduling: a Machine Learning Perspective. in the 12th IEEE SOSE 2018, <a href="paper/sose2018.pdf">[paper]</a>       
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, X.Ouyang, Y.Chen, P.Townend, J.Xu. Intelligent Resource Scheduling: a Machine Learning Perspective. in the 12th IEEE SOSE 2018, <a href="paper/sose2018.pdf">[paper]</a>       
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  Y.Zhang, M.Zhang, T.Wo, X.Lin, R.Yang, J.Xu. A Scalable lnternet-of-Vehicles Service over Joint Clouds. in the 9th IEEE JCC 2018 <a href="paper/jcc2018.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Y.Zhang, M.Zhang, T.Wo, X.Lin, R.Yang, J.Xu. A Scalable lnternet-of-Vehicles Service over Joint Clouds. in the 9th IEEE JCC 2018 <a href="paper/jcc2018.pdf">[paper]</a>
 </span></p>
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2017 </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing(TSC) (SCI-IF = 4.418, Q1)  
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing(TSC) (SCI-IF = 4.418, Q1)  
 <a href="paper/tsc2016.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services, in IEEE Internet Computing (IC), IEEE Computer Society  (SCI-IF = 1.929, Q1)  <a href="paper/ic2017.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. Fog Orchestration for IoT Services, in IEEE Internet Computing (IC), IEEE Computer Society  (SCI-IF = 1.929, Q1)  <a href="paper/ic2017.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP, 2017 (poster) <a href="paper/sosp2017-poster.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP, 2017 (poster) <a href="paper/sosp2017-poster.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  R.Yang, T.Wo, Y. Wang, C.Hu and J.Xu. Software-defined Storage in Joint Cloud. Communications of CCF, 2017  (In Chinese) 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, T.Wo, Y. Wang, C.Hu and J.Xu. Software-defined Storage in Joint Cloud. Communications of CCF, 2017  (In Chinese) 
 <a href="paper/ccfcomm2017.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  L.Du, T.Wo, R.Yang*, C.Hu. Cider: a Rapid Docker Container Deployment System through Sharing Network Storage. in the 19th IEEE HPCC 2017
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; L.Du, T.Wo, R.Yang*, C.Hu. Cider: a Rapid Docker Container Deployment System through Sharing Network Storage. in the 19th IEEE HPCC 2017
 <a href="paper/hpcc2017.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; X.Ouyang, C.Wang, R.Yang, P.Towend, J.Xu. ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics. In the 23th IEEE ICPADS 2017 <a href="paper/icpads2017.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; X.Ouyang, C.Wang, R.Yang, P.Towend, J.Xu. ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics. In the 23th IEEE ICPADS 2017 <a href="paper/icpads2017.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; R.Yang, J.Xu. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; R.Yang, J.Xu. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
 </span></p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2016 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;   P.Garraghan, X.Ouyang, R.Yang*, D.McKee, J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing(TSC) (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;   &bull; P.Garraghan, X.Ouyang, R.Yang*, D.McKee, J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing(TSC) (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  C.Hu, X.Wang, R.Yang and T.Wo. ScalaRDF: a Distributed, Elastic and Scalable In-Memory RDF Triple Store. in the 22th IEEE ICPADS 2016 <a href="paper/icpads2016.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; C.Hu, X.Wang, R.Yang and T.Wo. ScalaRDF: a Distributed, Elastic and Scalable In-Memory RDF Triple Store. in the 22th IEEE ICPADS 2016 <a href="paper/icpads2016.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  H.Wang, M.Zhang, R.Yang, X.Lin, T.Wo, R.Ranjan and J.Xu. SMTP: An Optimized Storage Model For Big Vehicle Trajectory Data Exploiting Trajectory Pattern. in the18th IEEE HPCC 2016, <a href="paper/hpcc2016.pdf">[paper]</a>  
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; H.Wang, M.Zhang, R.Yang, X.Lin, T.Wo, R.Ranjan and J.Xu. SMTP: An Optimized Storage Model For Big Vehicle Trajectory Data Exploiting Trajectory Pattern. in the18th IEEE HPCC 2016, <a href="paper/hpcc2016.pdf">[paper]</a>  
 </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; R.Yang, T.Wo, C.Hu, J.Xu and M.Zhang. D2PS : a Dependable Data Provisioning Service in Multi-tenants Cloud Environment. in the 17th IEEE HASE 2016 <a href="paper/hase2016.pdf">[paper]</a>
-</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; R.Yang and J.Xu. Computing at Massive Scale: Scalability and Dependability Challenges, in the 10th IEEE International Symposium on Service Oriented System Engineering (SOSE 2016) <a href="paper/sose2016.pdf">[paper]</a> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; R.Yang, T.Wo, C.Hu, J.Xu and M.Zhang. D2PS : a Dependable Data Provisioning Service in Multi-tenants Cloud Environment. in the 17th IEEE HASE 2016 <a href="paper/hase2016.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  R.Yang, J.Ouyang, C.Hu. Fail at Scale. Communications of CCF, 2016 (In Chinese) <a href="paper/ccfcomm2016.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; R.Yang and J.Xu. Computing at Massive Scale: Scalability and Dependability Challenges, in the 10th IEEE International Symposium on Service Oriented System Engineering (SOSE 2016) <a href="paper/sose2016.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  X.Ouyang, P.Garraghan, R.Yang, P.Townend, and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, in the 46th IEEE/IFIP DSN 2016 (short) <a href="paper/dsn2016.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, J.Ouyang, C.Hu. Fail at Scale. Communications of CCF, 2016 (In Chinese) <a href="paper/ccfcomm2016.pdf">[paper]</a>
+</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; X.Ouyang, P.Garraghan, R.Yang, P.Townend, and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, in the 46th IEEE/IFIP DSN 2016 (short) <a href="paper/dsn2016.pdf">[paper]</a>
 </span></p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2015 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; J.Wen, T.Wo, M.Zhang, R.Yang, J.Xu
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; J.Wen, T.Wo, M.Zhang, R.Yang, J.Xu
 A Method for Private Car Transportation Dispatching Based on a Passenger Demand Model. in the 2nd International Conference on Internet of Vehicles (IoV 2015), 
 <a href="paper/iov2015.pdf">[paper]</a>
 </span></p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2014 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  L.Cui, J.Li, T.Wo, B.Li, R.Yang, Y.Cao, J.Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, in the 28th USENIX Large Installation System Administration Conference (LISA 2014) <a href="paper/lisa2014.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; L.Cui, J.Li, T.Wo, B.Li, R.Yang, Y.Cao, J.Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, in the 28th USENIX Large Installation System Administration Conference (LISA 2014) <a href="paper/lisa2014.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang, J.Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale, in the 40th VLDB 2014, <a href="paper/vldb2014.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang, J.Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale, in the 40th VLDB 2014, <a href="paper/vldb2014.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  Y.Huang, R.Yang, L.Cui, T.Wo, C.Hu, B.Li. VMCSnap: Taking Snapshots of Virtual Machine Cluster with Memory Deduplication. in the 8th IEEE SOSE 2014<a href="paper/ivce2014.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Y.Huang, R.Yang, L.Cui, T.Wo, C.Hu, B.Li. VMCSnap: Taking Snapshots of Virtual Machine Cluster with Memory Deduplication. in the 8th IEEE SOSE 2014<a href="paper/ivce2014.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  Y.Wang, R.Yang, T.Wo, W.Jiang, C.Hu. Improving Utilization through Dynamic VM Resource Allocation in Hybrid Cloud Environment, in the 20th IEEE ICPADS 2014, <a href="paper/icpads2014-202.pdf">[paper]</a>    
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Y.Wang, R.Yang, T.Wo, W.Jiang, C.Hu. Improving Utilization through Dynamic VM Resource Allocation in Hybrid Cloud Environment, in the 20th IEEE ICPADS 2014, <a href="paper/icpads2014-202.pdf">[paper]</a>    
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  J.Li, J.Zheng, L.Cui and R.Yang. ConSnap: Taking Continuous Snapshots for Running State Protection of Virtual Machines, in the 20th IEEE ICPADS 2014, <a href="paper/icpads2014-147.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; J.Li, J.Zheng, L.Cui and R.Yang. ConSnap: Taking Continuous Snapshots for Running State Protection of Virtual Machines, in the 20th IEEE ICPADS 2014, <a href="paper/icpads2014-147.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  B.Zhang, J.Kang, T.Wo, Y.Wang, R.Yang. a Flexible and Scalable Affinity Lock for the Kernel, in the 16th IEEE HPCC 2014, <a href="paper/hpcc2014.pdf">[paper]</a> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; B.Zhang, J.Kang, T.Wo, Y.Wang, R.Yang. a Flexible and Scalable Affinity Lock for the Kernel, in the 16th IEEE HPCC 2014, <a href="paper/hpcc2014.pdf">[paper]</a> 
 </span></p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2013 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  I.Moreno, R.Yang, J.Xu, T.Wo. Improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement. in the 11th IEEE ISADS 2013 (Best Paper Award) <a href="paper/isads2013.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; I.Moreno, R.Yang, J.Xu, T.Wo. Improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement. in the 11th IEEE ISADS 2013 (Best Paper Award) <a href="paper/isads2013.pdf">[paper]</a>
 </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  R.Yang, I.Moreno, J.Xu, T.Wo. An Analysis of Performance Interference Effects on Energy-Efficiency of Virtualized Cloud Environments, in the IEEE CloudCom 2013, <a href="paper/cloudcom2013.pdf">[paper]</a>  
-</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  Y.Zhang, R.Yang, T.Wo, C.Hu, J.Kang , L.Cui. CloudAP: Improving the QoS of Mobile Applications with Efficient VM Migration, in the 15th IEEE HPCC 2013, <a href="paper/hpcc2013.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, I.Moreno, J.Xu, T.Wo. An Analysis of Performance Interference Effects on Energy-Efficiency of Virtualized Cloud Environments, in the IEEE CloudCom 2013, <a href="paper/cloudcom2013.pdf">[paper]</a>  
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  W.Wang, C.Hu, T.Wo and R.Yang*. YarnPlus: A Yarn Based Framework for Fine-Grained Resource Sharing in Heterogeneous Computing Environments, in the 11th CCF CNCC 2013, <a href="paper/cncc2013.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Y.Zhang, R.Yang, T.Wo, C.Hu, J.Kang , L.Cui. CloudAP: Improving the QoS of Mobile Applications with Efficient VM Migration, in the 15th IEEE HPCC 2013, <a href="paper/hpcc2013.pdf">[paper]</a>
+</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; W.Wang, C.Hu, T.Wo and R.Yang*. YarnPlus: A Yarn Based Framework for Fine-Grained Resource Sharing in Heterogeneous Computing Environments, in the 11th CCF CNCC 2013, <a href="paper/cncc2013.pdf">[paper]</a>
 </span></p>
 
 
